kubernetes/apps/keyb/prod/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keyb-backend-service
  namespace: keyb
spec:
  selector:
    app: keyb-backend-prod
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: 4000
